--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ server.servlet.context-path= /home
 
 
 #segunda
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/smarthealt360?sslMode=VERIFY_IDENTITY
-spring.datasource.username=m0xn9q68wr3y4pid08r7
-spring.datasource.password=pscale_pw_sJl9D5cBZabXBonJuQTmO0bYbw1YPsFo3oh2cyyudgj
+spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/smarthealt?sslMode=VERIFY_IDENTITY
+spring.datasource.username=fcyss3dog24nme6lwl9d
+spring.datasource.password=pscale_pw_Ir1SKtRN5Gl4jpGSU1roRx78KEUbJGnRlSjmyZekquQ
 
 #railwey
 
