--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,10 @@ server.servlet.context-path= /home
 
 
 
-
 #segunda
-spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/smarthealt?sslMode=VERIFY_IDENTITY
-spring.datasource.username=fcyss3dog24nme6lwl9d
-spring.datasource.password=pscale_pw_Ir1SKtRN5Gl4jpGSU1roRx78KEUbJGnRlSjmyZekquQ
+#spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/smarthealt360?sslMode=VERIFY_IDENTITY
+#spring.datasource.username=dsc3uc4mg2l310r8t0lp
+#spring.datasource.password=pscale_pw_rc9Nq2nR0cvUYHXBV84gc0VoCkN81Pi5IHrnTbwXPyk
 
 #railwey
 
@@ -31,9 +30,9 @@ spring.datasource.password=pscale_pw_Ir1SKtRN5Gl4jpGSU1roRx78KEUbJGnRlSjmyZekquQ
 
 
 #clever
-#spring.datasource.url=jdbc:mysql://uarfjpmqbsxakevm:CmHucstiln8SbAzdXFgo@bvy2w9nv16eoivchwe9d-mysql.services.clever-cloud.com:3306/bvy2w9nv16eoivchwe9d
-#spring.datasource.username=uarfjpmqbsxakevm
-#spring.datasource.password=CmHucstiln8SbAzdXFgo
+spring.datasource.url=jdbc:mysql://uarfjpmqbsxakevm:CmHucstiln8SbAzdXFgo@bvy2w9nv16eoivchwe9d-mysql.services.clever-cloud.com:3306/bvy2w9nv16eoivchwe9d
+spring.datasource.username=uarfjpmqbsxakevm
+spring.datasource.password=CmHucstiln8SbAzdXFgo
 
 
 
