--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,15 @@ server.servlet.context-path= /home
 
 
 #clever
-spring.datasource.url=jdbc:mysql://uarfjpmqbsxakevm:CmHucstiln8SbAzdXFgo@bvy2w9nv16eoivchwe9d-mysql.services.clever-cloud.com:3306/bvy2w9nv16eoivchwe9d
-spring.datasource.username=uarfjpmqbsxakevm
-spring.datasource.password=CmHucstiln8SbAzdXFgo
+#spring.datasource.url=jdbc:mysql://uarfjpmqbsxakevm:CmHucstiln8SbAzdXFgo@bvy2w9nv16eoivchwe9d-mysql.services.clever-cloud.com:3306/bvy2w9nv16eoivchwe9d
+#spring.datasource.username=uarfjpmqbsxakevm
+#spring.datasource.password=CmHucstiln8SbAzdXFgo
+#clever
+
+#AWS
+spring.datasource.url=jdbc:mysql://smarth-db.chenbke79stf.us-east-1.rds.amazonaws.com:3306/smarthdb?useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=kl1kan247
 
 
 
